fixed title link overflow bug

--- a/grog-cocktails-app/src/Compontents/Nav/nav.scss
+++ b/grog-cocktails-app/src/Compontents/Nav/nav.scss
@@ -9,6 +9,7 @@ header {
     left: 0;
     right: 0;
     z-index: 100;
+    overflow: hidden;
 }
 
 
